--- a/WCSTrainer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,32 +2,22 @@
 @model LoginModel
 
 <div class="login-container">
-    <p class="title">Log in</p>
-    <form id="account" method="post">
-        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-        <div class="field">
+   <p class="title">Log in</p>
+   <form id="account" method="post">
+      <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+      <div class="field">
          <label asp-for="Input.Username" class="label">Username</label>
          <span asp-validation-for="Input.Username" class="text-danger"></span>
          <input asp-for="Input.Username" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-        </div>
-        <div class="field">
-            <label asp-for="Input.Password" class="label">Password</label>
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
-            <input asp-for="Input.Password" autocomplete="current-password" aria-required="true" placeholder="password" />
-        </div>
-        <div class="login-remember">
-            <label asp-for="Input.RememberMe" class="form-label">
-                <input class="form-check-input" asp-for="Input.RememberMe" />
-                @Html.DisplayNameFor(m => m.Input.RememberMe)
-            </label>
-        </div>
-        <div class="login-btns">
-            <button id="login-submit" type="submit" class="btn bg-btn btnWhite">Log in</button>
-        </div>
-        <div class="login-links">
-            <a id="forgot-password" asp-page="./ForgotPassword">Forgot Password?</a>
-            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register Account</a>
-            <!-- <a id="resend-confirmation" asp-page="./resendemailconfirmation">resend email confirmation</a> -->
-        </div>
-    </form>
+      </div>
+      <div class="field">
+         <label asp-for="Input.Password" class="label">Password</label>
+         <span asp-validation-for="Input.Password" class="text-danger"></span>
+         <input asp-for="Input.Password" autocomplete="current-password" aria-required="true" placeholder="password" />
+      </div>
+      <input class="form-check-input" asp-for="Input.RememberMe" hidden />
+      <div class="login-btns">
+         <button id="login-submit" type="submit" class="btn bg-btn btnWhite">Log in</button>
+      </div>
+   </form>
 </div>
