--- a/WCSTrainer/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,6 +3,19 @@
 @{
 }
 
+@if (TempData["SuccessMessage"] != null)
+{
+   <script>
+      window.onload = function() {
+          alert(@Html.Raw(Json.Serialize(TempData["SuccessMessage"])));
+          setTimeout(() => {
+            document.querySelectorAll(".Finput").forEach(input => input.value = "");
+          }, 100);
+      };
+   </script>
+}
+
+
 <div class="login-container">
    <p class="title">Register</p>
    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -10,27 +23,27 @@
       <div class="field">
          <label class="label" asp-for="Input.Username">Username</label>
          <span asp-validation-for="Input.Username" class="text-danger"></span>
-         <input asp-for="Input.Username" autocomplete="username" aria-required="true" placeholder="Username123" />
+         <input asp-for="Input.Username" aria-required="true" placeholder="Username123" class="Finput" />
       </div>
       <div class="field">
          <label class="label" asp-for="Input.FirstName">First Name</label>
          <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-         <input asp-for="Input.FirstName" aria-required="true" placeholder="first name" />
+         <input asp-for="Input.FirstName" aria-required="true" placeholder="First Name" class="Finput" />
       </div>
       <div class="field">
          <label class="label" asp-for="Input.LastName">Last Name</label>
          <span asp-validation-for="Input.LastName" class="text-danger"></span>
-         <input asp-for="Input.LastName" aria-required="true" placeholder="last name" />
+         <input asp-for="Input.LastName" aria-required="true" placeholder="Last Name" class="Finput" />
       </div>
       <div class="field">
          <label class="label" asp-for="Input.Password">Password</label>
          <span asp-validation-for="Input.Password" class="text-danger"></span>
-         <input asp-for="Input.Password" autocomplete="new-password" aria-required="true" placeholder="password" />
+         <input asp-for="Input.Password" aria-required="true" placeholder="Password" class="Finput" />
       </div>
       <div class="field">
          <label class="label" asp-for="Input.ConfirmPassword">Confirm Password</label>
          <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-         <input asp-for="Input.ConfirmPassword" autocomplete="new-password" aria-required="true" placeholder="confirm password" />
+         <input asp-for="Input.ConfirmPassword" aria-required="true" placeholder="Confirm Password" class="Finput" />
       </div>
       <div class="login-btns">
          <button id="registerSubmit" type="submit" class="btn bg-btn btnWhite">Register</button>
