--- a/WCSTrainer/Pages/Shared/_LoginPartial.cshtml
+++ b/WCSTrainer/Pages/Shared/_LoginPartial.cshtml
@@ -8,14 +8,15 @@
    if (user != null) {
       <a href="/Identity/Account/Manage" class="login-email">@user.UserName</a>
    }
-   <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-      <div class="btn-container">
+   <div class="btn-container">
+      <a id="register" asp-area="Identity" asp-page="/Account/Register" class="btn bg-btn btnWhite">Register Account</a>
+      <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
          <button id="logout" type="submit" class="btn bg-btn btnWhite">Logout</button>
-      </div>
-   </form>
+      </form>
+   </div>
+  
 } else {
    <div class="btn-container">
-      <a id="register" asp-area="Identity" asp-page="/Account/Register" class="btn bg-btn btnWhite">Register</a>
       <a id="login" asp-area="Identity" asp-page="/Account/Login" class="btn bg-btn btnWhite">Login</a>
    </div>
 }
