--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -85,6 +85,8 @@
                               <p class="section-info archived">Archived</p>
                               <input type="checkbox" id="showArchived" />
                            </div>
+                        } else {
+                           <input type="checkbox" id="showArchived" hidden />
                         }
                      }
                   }
