--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -90,7 +90,7 @@
             <p id="status" class="two"></p>
          </div>
          <div class="info">
-            <p class="one">Departments:</p>
+            <p class="one">Known Skills:</p>
             <p id="department" class="two"></p>
          </div>
          <div class="btn-container">
