--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -10,18 +10,14 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            @if (SignInManager.IsSignedIn(User))
-            {
+            @if (SignInManager.IsSignedIn(User)) {
                var user = await UserManager.GetUserAsync(User);
-               if (user != null)
-               {
+               if (user != null) {
                   var isOwner = await UserManager.IsInRoleAsync(user, "owner");
                   var isAdmin = await UserManager.IsInRoleAsync(user, "admin");
 
-                  @if (Model.TrainingOrder.Archived == true)
-                  {
-                     if (isAdmin || isOwner)
-                     {
+                  @if (Model.TrainingOrder.Archived == true) {
+                     if (isAdmin || isOwner) {
                         <component type="typeof(TrainingDetails)" render-mode="WebAssemblyPrerendered" param-OrderId="@Model.TrainingOrder.Id" />
                         <div class="btn-container">
                            @{
@@ -29,8 +25,7 @@
                                  <img class="hover-img" src="/images/print.svg">
                               </div>
 
-                              if (isAdmin || isOwner)
-                              {
+                              if (isAdmin || isOwner) {
                                  string text = Model.TrainingOrder.Archived ? "Unarchive" : "Archive";
                                  <form method="post" id="archiveForm">
                                     <a class="btn bg-btn btnWhite" href="#" onclick="document.getElementById('archiveForm').submit();">
@@ -39,49 +34,34 @@
                                  </form>
                               }
 
-                              if (isOwner)
-                              {
+                              if (isOwner) {
                                  <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.TrainingOrder.Id"> Delete</a>
                               }
                            }
-
                         </div>
-                     }
-                     else
-                     {
+                     } else {
                         <p>You do not have permission to view this document.</p>
                      }
-                  }
-                  else
-                  {
+                  } else {
                      <component type="typeof(TrainingDetails)" render-mode="WebAssemblyPrerendered" param-OrderId="@Model.TrainingOrder.Id" />
                      <div class="btn-container">
                         @{
                            var Status = Model.TrainingOrder.Status;
                            var Id = Model.TrainingOrder.Id;
 
-                           if (Status.Equals("Active"))
-                           {
+                           if (Status.Equals("Active")) {
                               <a class="btn bg-btn btnRed" asp-page="./Conclude" asp-route-id="@Id">Conclude Order</a>
                            }
 
-                           if (isAdmin || isOwner)
-                           {
-                              if (Model.TrainingOrder.TraineeId != user.EmployeeId)
-                              {
-                                 if (Status.Equals("Approving"))
-                                 {
+                           if (isAdmin || isOwner) {
+                              if (Model.TrainingOrder.TraineeId != user.EmployeeId) {
+                                 if (Status.Equals("Approving")) {
                                     <a class="btn bg-btn btnRed" asp-page="./Approval" asp-route-id="@Id">Approve Order</a>
-                                 }
-                                 else if (Status.Equals("Scheduling"))
-                                 {
+                                 } else if (Status.Equals("Scheduling")) {
                                     <a class="btn bg-btn btnRed" asp-page="./Scheduling" asp-route-id="@Id">Schedule Order</a>
-                                 }
-                                 else if (Status.Equals("Completed"))
-                                 {
+                                 } else if (Status.Equals("Completed")) {
                                     <a class="btn bg-btn btnRed" asp-page="./Verification" asp-route-id="@Id">Verify Order</a>
                                  }
-
                                  <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Id">Edit Order</a>
                               }
                            }
@@ -90,8 +70,7 @@
                               <img class="hover-img" src="/images/print.svg">
                            </div>
 
-                           if (isAdmin || isOwner)
-                           {
+                           if (isAdmin || isOwner) {
                               string text = Model.TrainingOrder.Archived ? "Unarchive" : "Archive";
                               <form method="post" id="archiveForm">
                                  <a class="btn bg-btn btnWhite" href="#" onclick="document.getElementById('archiveForm').submit();">
@@ -100,16 +79,12 @@
                               </form>
                            }
 
-                           if (isOwner)
-                           {
+                           if (isOwner) {
                               <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.TrainingOrder.Id"> Delete</a>
                            }
                         }
-
                      </div>
                   }
-
-
                }
             }
          </div>
