--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -3,57 +3,6 @@
 
 @using System.Text.RegularExpressions
 
-
-@functions {
-   public string ConvertContent(string content)
-   {
-      var urlRegex = new Regex(@"(http|https)://[^\s]+|[a-zA-Z]:/[^\s]+");
-      return urlRegex.Replace(content, match =>
-      {
-         var url = match.Value;
-
-         if (url.Contains("youtube.com/watch?v=") || url.Contains("youtu.be/"))
-         {
-            var videoId = ExtractYouTubeId(url);
-            if (videoId != null)
-            {
-               return $"<iframe class=\"description-video\" src=\"https://www.youtube.com/embed/{videoId}\" frameborder=\"0\" allowfullscreen></iframe>";
-            }
-         }
-         else if (Regex.IsMatch(url, @"^S:/"))
-         {
-            var webPath = ConvertToWebPath(url, "S:");
-            return $"<iframe src=\"{webPath}\" frameborder=\"0\" width=\"100%\" height=\"500\"></iframe>";
-         }
-         else if (Regex.IsMatch(url, @"^D:/"))
-         {
-            var webPath = ConvertToWebPath(url, "D:");
-            var fileName = System.IO.Path.GetFileName(url);
-            return $"<a class=\"btn btnBlue bg-btn\" href=\"{webPath}\" download>Download {fileName}</a>";
-         }
-         else if (Regex.IsMatch(url, @"^I:/"))
-         {
-            var webPath = ConvertToWebPath(url, "I:");
-            var fileName = System.IO.Path.GetFileName(url);
-            return $"<img src=\"{webPath}\" alt=\"[Could not load image.]\" />";
-         }
-         return $"<a class=\"description-link\" href=\"{url}\" target=\"_blank\">{url}</a>";
-      });
-   }
-
-   private string ConvertToWebPath(string filePath, string drivePrefix)
-   {
-      return filePath.Replace("\\", "/").Replace(drivePrefix, "");
-   }
-
-   private string ExtractYouTubeId(string url)
-   {
-      var youtubeIdRegex = new Regex(@"(?:https?:\/\/)?(?:www\.)?(?:youtube\.com\/watch\?v=|youtu\.be\/)([a-zA-Z0-9_-]{11})");
-      var match = youtubeIdRegex.Match(url);
-      return match.Success ? match.Groups[1].Value : null;
-   }
-}
-
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
@@ -99,7 +48,7 @@
                            <div id="editor-container" data-tiny-editor data-bold="yes" data-formatblock="no" data-italic="yes" data-underline="yes" data-fontname="no"
                                 data-forecolor="yes" data-justifyleft="no" data-justifycenter="no" data-justifyright="no" data-insertorderedlist="no"
                                 data-insertunorderedlist="no" data-outdent="yes" data-indent="yes" data-remove-format="yes"
-                                data-autofocus="yes">@Html.Raw(ConvertContent(Model.Lesson.Content))</div>
+                                data-autofocus="yes">@Html.Raw(Model.Lesson.Content)</div>
                         } else {
                            <div id="editor-container" data-tiny-editor data-bold="yes" data-formatblock="no" data-italic="yes" data-underline="yes" data-fontname="no"
                                 data-forecolor="yes" data-justifyleft="no" data-justifycenter="no" data-justifyright="no" data-insertorderedlist="no"
